cleaning, Configuration @CompScan => @Import